# Pre-Adaptation-Tuning

./: .gitignore  BUG_FIXES_SUMMARY.md  FIGURE_MAPPING.md  FITTING.md  Introduction.txt  M-TWOR-OPENLOOP.md  Plan.md  README.md  RESULTS.md  Results.md  SIMULATION.md  TRY.md  check_pareto_k.py  paper.txt  pyproject.toml
data/: README.md  m2_m3_results.csv
data/derived/: adaptation_calibration.csv  adaptation_subjects.csv  adaptation_trials.csv  final_model_fit_metrics.csv  final_model_predictions.csv  group_comparisons.csv  learning_slopes.csv  m_obs_fit_metrics.csv  m_obs_predictions.csv  m_obs_results.csv  model_comparison_final.csv  model_comparison_tier1_logpi_2000x4.csv  model_fit_metrics.csv  model_predictions.csv  proprio_delta_pi.csv  proprio_prepost_summary.csv  real_fit_numpyro.csv  state_based_slopes.csv
data/raw/: adaptation_trials.csv  proprio_delta_pi.csv
data/recovery/: model_recovery_results.csv  param_recovery_m2onm3.csv  param_recovery_m3.csv
notebooks/: sim_plots.ipynb  sweep_analysis.ipynb
raw/: EC_main.csv  EC_prepost.csv  EO+_main.csv  EO+_prepost.csv  EO-_main.csv  EO-_prepost.csv
scripts/: analyze_model_results.py  analyze_recovery.py  analyze_sweep.py  fit_real_data.py  fit_real_data_bayes.py  fit_real_data_numpyro.py  fit_real_data_pymc.py  fit_sim_recovery.py  plot_delta_pi_groups.py  plot_delta_pi_learning.py  plot_recovery.py  plot_sim.py  run_sim.py  run_sims.py  run_sweep.py  run_sweep_from_data.py
scripts/analysis/: bayesian_beta_obs_comparison.py  fig34.py  (+9 more)
tables/: convergence_diagnostics.csv  effect_sizes.csv
(+45 files in other folders)
