[project]
name = "prism-adaptation-sim"
version = "0.1.0"
description = "Simulation tools for precision transfer in prism adaptation."
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scipy>=1.11",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
