[tool.poetry]
name = "prism-adaptation-sim"
version = "0.1.0"
description = "Simulation and fitting tools for precision transfer in prism adaptation."
authors = ["Liang Lee"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.26"
pandas = ">=2.2"
matplotlib = ">=3.8"
scipy = ">=1.11"
pymc = {version = "5.16.1", extras = ["extra", "jax"]}
arviz = ">=0.15"
numpyro = "^0.19.0"
jax = {version = "0.4.35", extras = ["cpu"]}
jaxlib = "0.4.35"
seaborn = "^0.13.2"
cmdstanpy = "^1.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
